[package]
name = "pleme-actions-shared"
version = "0.1.0"
edition = "2024"
rust-version = "1.89.0"
description = "Shared toolkit for pleme-io GitHub Actions — typed input/output, step-summary builder, structured logging, GitHub-annotation error format. Every pleme-io action's binary depends on this crate."
license = "MIT"
authors = ["drzzln <drzzln@protonmail.com>"]
repository = "https://github.com/pleme-io/pleme-actions-shared"
homepage = "https://github.com/pleme-io/pleme-actions-shared"
readme = "README.md"
keywords = ["github-actions", "actions", "pleme-io", "ci"]
categories = ["development-tools"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
tempfile = "3"
serde = { version = "1", features = ["derive"] }

[lints.clippy]
pedantic = "warn"
